Refactor code: Replace fetch with Axios and implement async/await

--- a/src/search.html
+++ b/src/search.html
@@ -19,6 +19,7 @@
         </form>
         <span class="loader"></span>
         <div class="gallery" id="gallery"></div>
+        <button class="loadBtn" style="display: none;">Load more</button>
     </div>
     
 </body>
